fixed hero loading bug on ie

--- a/sass/px-hero-image.scss
+++ b/sass/px-hero-image.scss
@@ -37,11 +37,11 @@ img{
   z-index: 99;
 }
 :host([large-screen][dark]) .hero-animation-slot > ::slotted(.hero-image--desktop--dark){
-  display: initial;
+  display: block;
   visibility: visible;
 }
 :host([large-screen]):not([dark]) .hero-animation-slot > ::slotted(.hero-image--desktop--light){
-  display: initial;
+  display: block;
   visibility: visible;
 }
 .hero-image--background{
